# Project-Tracker

./: README.md  pyproject.toml
backend/: README.md
backend/app/: main.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  styles.css  types.ts
frontend/src/components/: Kanban.tsx  ProjectManager.tsx
