[tool.poetry]
name = "proman"
version = "0.1.0"
description = "Project Management App"
authors = ["riutomo42@gmail.com"]
license = "Open"
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.0"
python-dotenv = "^1.0.1"
aiofiles = "^24.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
